voice2json/train/jsgf2fst/JsgfParser.py
# Generated from JsgfParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class JsgfParser ( Parser ):

    grammarFileName = "JsgfParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'public'", "'#JSGF'", "'grammar'", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'<'", "'>'", 
                     "';'", "'.'", "'#'", "'='", "'|'", "'\\{'", "'\\}'" ]

    symbolicNames = [ "<INVALID>", "PUBLIC", "JSGF", "GRAMMAR", "VERSION", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "LANGLE", "RANGLE", "SEMI", "DOT", "HASH", 
                      "EQUALS", "BAR", "ESCAPE_LBRACE", "ESCAPE_RBRACE", 
                      "WS", "COMMENT", "LINE_COMMENT", "TOKEN" ]

    RULE_r = 0
    RULE_grammarHeader = 1
    RULE_encoding = 2
    RULE_language = 3
    RULE_grammarDeclaration = 4
    RULE_grammarName = 5
    RULE_grammarBody = 6
    RULE_ruleDefinition = 7
    RULE_ruleName = 8
    RULE_ruleBody = 9
    RULE_ruleReference = 10
    RULE_atom = 11
    RULE_group = 12
    RULE_optional = 13
    RULE_literal = 14
    RULE_word = 15
    RULE_expression = 16
    RULE_alternative = 17
    RULE_tagBody = 18
    RULE_tag = 19

    ruleNames =  [ "r", "grammarHeader", "encoding", "language", "grammarDeclaration", 
                   "grammarName", "grammarBody", "ruleDefinition", "ruleName", 
                   "ruleBody", "ruleReference", "atom", "group", "optional", 
                   "literal", "word", "expression", "alternative", "tagBody", 
                   "tag" ]

    EOF = Token.EOF
    PUBLIC=1
    JSGF=2
    GRAMMAR=3
    VERSION=4
    LPAREN=5
    RPAREN=6
    LBRACE=7
    RBRACE=8
    LBRACK=9
    RBRACK=10
    LANGLE=11
    RANGLE=12
    SEMI=13
    DOT=14
    HASH=15
    EQUALS=16
    BAR=17
    ESCAPE_LBRACE=18
    ESCAPE_RBRACE=19
    WS=20
    COMMENT=21
    LINE_COMMENT=22
    TOKEN=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def grammarHeader(self):
            return self.getTypedRuleContext(JsgfParser.GrammarHeaderContext,0)


        def grammarDeclaration(self):
            return self.getTypedRuleContext(JsgfParser.GrammarDeclarationContext,0)


        def grammarBody(self):
            return self.getTypedRuleContext(JsgfParser.GrammarBodyContext,0)


        def getRuleIndex(self):
            return JsgfParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)




    def r(self):

        localctx = JsgfParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_r)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.grammarHeader()
            self.state = 41
            self.grammarDeclaration()
            self.state = 42
            self.grammarBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarHeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JSGF(self):
            return self.getToken(JsgfParser.JSGF, 0)

        def SEMI(self):
            return self.getToken(JsgfParser.SEMI, 0)

        def VERSION(self):
            return self.getToken(JsgfParser.VERSION, 0)

        def encoding(self):
            return self.getTypedRuleContext(JsgfParser.EncodingContext,0)


        def language(self):
            return self.getTypedRuleContext(JsgfParser.LanguageContext,0)


        def getRuleIndex(self):
            return JsgfParser.RULE_grammarHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarHeader" ):
                listener.enterGrammarHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarHeader" ):
                listener.exitGrammarHeader(self)




    def grammarHeader(self):

        localctx = JsgfParser.GrammarHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_grammarHeader)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(JsgfParser.JSGF)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JsgfParser.VERSION:
                self.state = 45
                self.match(JsgfParser.VERSION)


            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 48
                self.encoding()


            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JsgfParser.TOKEN:
                self.state = 51
                self.language()


            self.state = 54
            self.match(JsgfParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EncodingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOKEN(self, i:int=None):
            if i is None:
                return self.getTokens(JsgfParser.TOKEN)
            else:
                return self.getToken(JsgfParser.TOKEN, i)

        def getRuleIndex(self):
            return JsgfParser.RULE_encoding

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEncoding" ):
                listener.enterEncoding(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEncoding" ):
                listener.exitEncoding(self)




    def encoding(self):

        localctx = JsgfParser.EncodingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_encoding)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 56
                    self.match(JsgfParser.TOKEN)

                else:
                    raise NoViableAltException(self)
                self.state = 59 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LanguageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOKEN(self, i:int=None):
            if i is None:
                return self.getTokens(JsgfParser.TOKEN)
            else:
                return self.getToken(JsgfParser.TOKEN, i)

        def getRuleIndex(self):
            return JsgfParser.RULE_language

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLanguage" ):
                listener.enterLanguage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLanguage" ):
                listener.exitLanguage(self)




    def language(self):

        localctx = JsgfParser.LanguageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_language)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 61
                self.match(JsgfParser.TOKEN)
                self.state = 64 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==JsgfParser.TOKEN):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GRAMMAR(self):
            return self.getToken(JsgfParser.GRAMMAR, 0)

        def grammarName(self):
            return self.getTypedRuleContext(JsgfParser.GrammarNameContext,0)


        def SEMI(self):
            return self.getToken(JsgfParser.SEMI, 0)

        def getRuleIndex(self):
            return JsgfParser.RULE_grammarDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarDeclaration" ):
                listener.enterGrammarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarDeclaration" ):
                listener.exitGrammarDeclaration(self)




    def grammarDeclaration(self):

        localctx = JsgfParser.GrammarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_grammarDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(JsgfParser.GRAMMAR)
            self.state = 67
            self.grammarName()
            self.state = 68
            self.match(JsgfParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def word(self):
            return self.getTypedRuleContext(JsgfParser.WordContext,0)


        def getRuleIndex(self):
            return JsgfParser.RULE_grammarName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarName" ):
                listener.enterGrammarName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarName" ):
                listener.exitGrammarName(self)




    def grammarName(self):

        localctx = JsgfParser.GrammarNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_grammarName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.word()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ruleDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsgfParser.RuleDefinitionContext)
            else:
                return self.getTypedRuleContext(JsgfParser.RuleDefinitionContext,i)


        def getRuleIndex(self):
            return JsgfParser.RULE_grammarBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarBody" ):
                listener.enterGrammarBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarBody" ):
                listener.exitGrammarBody(self)




    def grammarBody(self):

        localctx = JsgfParser.GrammarBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_grammarBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.ruleDefinition()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==JsgfParser.PUBLIC or _la==JsgfParser.LANGLE):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LANGLE(self):
            return self.getToken(JsgfParser.LANGLE, 0)

        def ruleName(self):
            return self.getTypedRuleContext(JsgfParser.RuleNameContext,0)


        def RANGLE(self):
            return self.getToken(JsgfParser.RANGLE, 0)

        def EQUALS(self):
            return self.getToken(JsgfParser.EQUALS, 0)

        def ruleBody(self):
            return self.getTypedRuleContext(JsgfParser.RuleBodyContext,0)


        def SEMI(self):
            return self.getToken(JsgfParser.SEMI, 0)

        def PUBLIC(self):
            return self.getToken(JsgfParser.PUBLIC, 0)

        def getRuleIndex(self):
            return JsgfParser.RULE_ruleDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleDefinition" ):
                listener.enterRuleDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleDefinition" ):
                listener.exitRuleDefinition(self)




    def ruleDefinition(self):

        localctx = JsgfParser.RuleDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ruleDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JsgfParser.PUBLIC:
                self.state = 77
                self.match(JsgfParser.PUBLIC)


            self.state = 80
            self.match(JsgfParser.LANGLE)
            self.state = 81
            self.ruleName()
            self.state = 82
            self.match(JsgfParser.RANGLE)
            self.state = 83
            self.match(JsgfParser.EQUALS)
            self.state = 84
            self.ruleBody()
            self.state = 85
            self.match(JsgfParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOKEN(self, i:int=None):
            if i is None:
                return self.getTokens(JsgfParser.TOKEN)
            else:
                return self.getToken(JsgfParser.TOKEN, i)

        def getRuleIndex(self):
            return JsgfParser.RULE_ruleName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleName" ):
                listener.enterRuleName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleName" ):
                listener.exitRuleName(self)




    def ruleName(self):

        localctx = JsgfParser.RuleNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ruleName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.match(JsgfParser.TOKEN)
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==JsgfParser.TOKEN):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(JsgfParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JsgfParser.RULE_ruleBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleBody" ):
                listener.enterRuleBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleBody" ):
                listener.exitRuleBody(self)




    def ruleBody(self):

        localctx = JsgfParser.RuleBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ruleBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleReferenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LANGLE(self):
            return self.getToken(JsgfParser.LANGLE, 0)

        def literal(self):
            return self.getTypedRuleContext(JsgfParser.LiteralContext,0)


        def RANGLE(self):
            return self.getToken(JsgfParser.RANGLE, 0)

        def getRuleIndex(self):
            return JsgfParser.RULE_ruleReference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleReference" ):
                listener.enterRuleReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleReference" ):
                listener.exitRuleReference(self)




    def ruleReference(self):

        localctx = JsgfParser.RuleReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ruleReference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(JsgfParser.LANGLE)
            self.state = 95
            self.literal()
            self.state = 96
            self.match(JsgfParser.RANGLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(JsgfParser.LiteralContext,0)


        def ruleReference(self):
            return self.getTypedRuleContext(JsgfParser.RuleReferenceContext,0)


        def group(self):
            return self.getTypedRuleContext(JsgfParser.GroupContext,0)


        def optional(self):
            return self.getTypedRuleContext(JsgfParser.OptionalContext,0)


        def getRuleIndex(self):
            return JsgfParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)




    def atom(self):

        localctx = JsgfParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_atom)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JsgfParser.TOKEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.literal()
                pass
            elif token in [JsgfParser.LANGLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.ruleReference()
                pass
            elif token in [JsgfParser.LPAREN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.group()
                pass
            elif token in [JsgfParser.LBRACK]:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.optional()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(JsgfParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JsgfParser.RPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsgfParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JsgfParser.ExpressionContext,i)


        def getRuleIndex(self):
            return JsgfParser.RULE_group

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroup" ):
                listener.enterGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroup" ):
                listener.exitGroup(self)




    def group(self):

        localctx = JsgfParser.GroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_group)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(JsgfParser.LPAREN)
            self.state = 106 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 105
                self.expression()
                self.state = 108 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JsgfParser.LPAREN) | (1 << JsgfParser.LBRACK) | (1 << JsgfParser.LANGLE) | (1 << JsgfParser.TOKEN))) != 0)):
                    break

            self.state = 110
            self.match(JsgfParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(JsgfParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(JsgfParser.RBRACK, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsgfParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JsgfParser.ExpressionContext,i)


        def getRuleIndex(self):
            return JsgfParser.RULE_optional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptional" ):
                listener.enterOptional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptional" ):
                listener.exitOptional(self)




    def optional(self):

        localctx = JsgfParser.OptionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_optional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(JsgfParser.LBRACK)
            self.state = 114 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 113
                self.expression()
                self.state = 116 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JsgfParser.LPAREN) | (1 << JsgfParser.LBRACK) | (1 << JsgfParser.LANGLE) | (1 << JsgfParser.TOKEN))) != 0)):
                    break

            self.state = 118
            self.match(JsgfParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def word(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsgfParser.WordContext)
            else:
                return self.getTypedRuleContext(JsgfParser.WordContext,i)


        def getRuleIndex(self):
            return JsgfParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = JsgfParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 120
                    self.word()

                else:
                    raise NoViableAltException(self)
                self.state = 123 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WordContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOKEN(self, i:int=None):
            if i is None:
                return self.getTokens(JsgfParser.TOKEN)
            else:
                return self.getToken(JsgfParser.TOKEN, i)

        def getRuleIndex(self):
            return JsgfParser.RULE_word

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWord" ):
                listener.enterWord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWord" ):
                listener.exitWord(self)




    def word(self):

        localctx = JsgfParser.WordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_word)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 125
                    self.match(JsgfParser.TOKEN)

                else:
                    raise NoViableAltException(self)
                self.state = 128 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(JsgfParser.AtomContext,0)


        def tag(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsgfParser.TagContext)
            else:
                return self.getTypedRuleContext(JsgfParser.TagContext,i)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsgfParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JsgfParser.ExpressionContext,i)


        def alternative(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsgfParser.AlternativeContext)
            else:
                return self.getTypedRuleContext(JsgfParser.AlternativeContext,i)


        def getRuleIndex(self):
            return JsgfParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = JsgfParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.atom()
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 134
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [JsgfParser.LBRACE]:
                        self.state = 131
                        self.tag()
                        pass
                    elif token in [JsgfParser.LPAREN, JsgfParser.LBRACK, JsgfParser.LANGLE, JsgfParser.TOKEN]:
                        self.state = 132
                        self.expression()
                        pass
                    elif token in [JsgfParser.BAR]:
                        self.state = 133
                        self.alternative()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlternativeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BAR(self):
            return self.getToken(JsgfParser.BAR, 0)

        def expression(self):
            return self.getTypedRuleContext(JsgfParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JsgfParser.RULE_alternative

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlternative" ):
                listener.enterAlternative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlternative" ):
                listener.exitAlternative(self)




    def alternative(self):

        localctx = JsgfParser.AlternativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_alternative)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(JsgfParser.BAR)
            self.state = 140
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def word(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JsgfParser.WordContext)
            else:
                return self.getTypedRuleContext(JsgfParser.WordContext,i)


        def ESCAPE_LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(JsgfParser.ESCAPE_LBRACE)
            else:
                return self.getToken(JsgfParser.ESCAPE_LBRACE, i)

        def ESCAPE_RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(JsgfParser.ESCAPE_RBRACE)
            else:
                return self.getToken(JsgfParser.ESCAPE_RBRACE, i)

        def getRuleIndex(self):
            return JsgfParser.RULE_tagBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagBody" ):
                listener.enterTagBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagBody" ):
                listener.exitTagBody(self)




    def tagBody(self):
